# NoCountry-Team-1

./: .gitignore  Inicio.py  README.md  best_model.joblib  division de columnas por tratamiento.ipynb  pyproject.toml  requirements.txt
.streamlit/pages/: 02_📊_Dashboard.py  03_👨‍💻_Modelo_de_Machine_Learning.py
Adicionales/: DiccionarioDeDatos.md
EDA/: EDA.ipynb  Utilidades.py
ETL/: data_exploratory_etl.ipynb  etl.py
docs/: README_poetry.md
machine_learning/: Modelo_ML.ipynb
machine_learning/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
machine_learning/catboost_info/learn/: events.out.tfevents
nc/: pyvenv.cfg
nc/Scripts/: activate  activate.bat
pages/: 03_👨‍💻_Modelo_de_Machine_Learning.py
