[tool.poetry]
name = "proyecto-deteccion-fraudes"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.4.2"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
ipykernel = "^6.29.4"
pyarrow = "^16.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
